Fixed everything shifting to the left when on home page. added styling for scrollbar.

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -16,6 +16,10 @@
   padding: 0;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   font-family: "Helvetica Neue", Arial, sans-serif;
   background: linear-gradient(to bottom right, #f7f7f7, #e3e3e3);
